[project]
name = "rag-pdf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.97.0",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.18.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.4",
]
